# duniter-v2s

./: .dockerignore  .gitignore  .gitlab-ci.yml  BENCHMARK.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml  file_header.txt  rust-toolchain  rust-toolchain.toml  rustfmt.toml  shell.nix
client/distance/: Cargo.toml  README.md
client/distance/src/: lib.rs
distance-oracle/: Cargo.toml  README.md  wot.deflate
distance-oracle/src/: api.rs  lib.rs  main.rs  mock.rs  tests.rs
end2end-tests/: Cargo.toml  README.md
end2end-tests/cucumber-features/: account_creation.feature  balance_transfer.feature  certification.feature  distance_fail.feature  identity_creation.feature  monetary_mass.feature  oneshot_account.feature  transfer_all.feature  universal_dividend.feature
end2end-tests/cucumber-genesis/: bad_distance.json  default.json  wot.json
end2end-tests/src/: lib.rs
end2end-tests/tests/: cucumber_tests.rs
end2end-tests/tests/common/: balances.rs  cert.rs  distance.rs  identity.rs  membership.rs  mod.rs  oneshot.rs
integration-tests/: Cargo.toml  README.md
integration-tests/features/: balance_transfer.feature  monetary_mass.feature
integration-tests/src/: balance_transfer.rs  common.rs  lib.rs
integration-tests/tests/: cucumber_tests.rs
integration-tests/tests/common/: balances.rs  mod.rs
integration-tests/tests/features/: balance_transfer.feature  transfer_all.feature
live-tests/: Cargo.toml  README.md
live-tests/tests/: sanity_gdev.rs
node/: Cargo.toml  README.md  build.rs
node/specs/: g1-checkpoint.json  g1_client-specs.yaml  gdev-checkpoint.json  gdev-raw.json  gdev_client-specs.json  gdev_client-specs.yaml  gtest-checkpoint.json  gtest_client-specs.json  gtest_client-specs.yaml
node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
node/src/chain_spec/: g1.rs  gdev.rs  gen_genesis_data.rs  gtest.rs  gtest_genesis.rs
node/src/cli/: key.rs  utils.rs
node/src/command/: key.rs  utils.rs
node/src/endpoint_gossip/: handler.rs  mod.rs  tests.rs
node/src/service/: client.rs
pallets/authority-members/: Cargo.toml  README.md
pallets/authority-members/src/: benchmarking.rs  impls.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/certification/: Cargo.toml  README.md
pallets/certification/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/distance/: Cargo.toml  README.md
pallets/distance/src/: benchmarking.rs  lib.rs  median.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/duniter-account/: Cargo.toml  README.md
pallets/duniter-account/src/: benchmarking.rs  lib.rs  runtime_api.rs  types.rs  weights.rs
pallets/duniter-test-parameters/: Cargo.toml  README.md
pallets/duniter-test-parameters/macro/: Cargo.toml
pallets/duniter-test-parameters/src/: lib.rs
pallets/duniter-wot/: Cargo.toml  README.md
pallets/duniter-wot/src/: lib.rs  mock.rs  tests.rs  traits.rs  types.rs
pallets/identity/: Cargo.toml  README.md
pallets/identity/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/membership/: Cargo.toml  README.md
pallets/membership/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/offences/: Cargo.toml  README.md
pallets/offences/src/: lib.rs  mock.rs  tests.rs  traits.rs
pallets/oneshot-account/: Cargo.toml  README.md
pallets/oneshot-account/src/: benchmarking.rs  check_nonce.rs  lib.rs  mock.rs  types.rs  weights.rs
pallets/provide-randomness/: Cargo.toml  README.md
pallets/provide-randomness/src/: benchmarking.rs  lib.rs  types.rs  weights.rs
pallets/quota/: Cargo.toml  README.md
pallets/quota/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
pallets/session-benchmarking/: Cargo.toml  README.md
pallets/session-benchmarking/src/: lib.rs
pallets/smith-members/: Cargo.toml  README.md
pallets/smith-members/src/: benchmarking.rs  impls.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/ud-accounts-storage/: Cargo.toml
pallets/ud-accounts-storage/src/: lib.rs
pallets/universal-dividend/: Cargo.toml  README.md
pallets/universal-dividend/src/: benchmarking.rs  compute_claim_uds.rs  lib.rs  mock.rs  runtime_api.rs  tests.rs  types.rs  weights.rs
pallets/upgrade-origin/: Cargo.toml  README.md
pallets/upgrade-origin/src/: benchmarking.rs  lib.rs  weights.rs
primitives/distance/: Cargo.toml
primitives/distance/src/: lib.rs
primitives/duniter/: Cargo.toml
primitives/duniter/src/: lib.rs
primitives/membership/: Cargo.toml
primitives/membership/src/: lib.rs  traits.rs
resources/weight_analyzer/: Cargo.toml
resources/weight_analyzer/src/: lib.rs
runtime/common/: Cargo.toml
runtime/common/src/: apis.rs  authorizations.rs  benchmarks.rs  constants.rs  entities.rs  fees.rs  handlers.rs  lib.rs  offchain.rs  pallets_config.rs  providers.rs  weights.rs
xtask/: Cargo.toml  README.md
xtask/res/: create_asset_link.gql  create_network_release.gql  create_release.gql  get_changes.gql  get_issues.gql  get_release.gql  runtime_release_notes.template  schema.gql
xtask/res/templates/: runtime-calls-category.md  runtime-calls.md  runtime-constants.md  runtime-errors.md  runtime-errors.po  runtime-events.md  runtime-storages.md
xtask/src/: build_network_runtime.rs  build_network_specs.rs  build_raw_specs.rs  build_runtime.rs  create_client_release.rs  create_network_release.rs  create_runtime_release.rs  docker_deploy.rs  g1_data.rs  gen_calls_doc.rs  gen_doc.rs  gitlab.rs  main.rs  release_runtime.rs
xtask/src/client/: build_deb.rs  build_raw_specs.rs  build_rpm.rs  create_client_release.rs  docker_deploy.rs  ensure_raw_spec.rs  finalize_release.rs  mod.rs  package_validation.rs  trigger_release_builds.rs
xtask/src/gitlab/: create_asset_link.rs  create_network_release.rs  create_release.rs  download_artifact.rs  get_changes.rs  get_issues.rs  get_pipeline_status.rs  get_release.rs  trigger_pipeline.rs  upload_file.rs
xtask/src/network/: g1_data.rs  (+4 more)
(+313 files in other folders)
